...
                            viewModel.loadData()
                        }
                        .padding()
                        .background(Color.uniPrimary)
                        .foregroundColor(.white)
                        .cornerRadius(8)
                        .accessibilityIdentifier("LoadButton")
                    }
                } else {
                    List {
                        ForEach(filteredStudents) { student in
                            StudentRow(student: student) {
                                // Action when Badge is tapped
...
                            }
                            .listRowSeparator(.hidden)
                            .listRowBackground(Color.clear)
                        }
                    }
                    .listStyle(.plain)
                    .accessibilityIdentifier("StudentList")
                }
            }
            .navigationTitle("Roster")
        }
    }
}
...
